test/cases/compile_errors/stage1/exe/private_main_fn.zig
fn main() void {}

// error
// backend=stage1
// target=native
// output_mode=Exe
//
// error: 'main' is private
// tmp.zig:1:1: note: declared here
